<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


<EditText
    android:id="@+id/et_input"
    android:layout_width="fill_parent"
    android:layout_height="60dip"
    android:background="@drawable/white_bg"
    android:gravity="right|bottom"
    android:editable="false"
    android:textSize="20sp"
     />

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dip"
        android:gravity="center_horizontal"
        android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal"

    >
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/btn_clear"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:background="@drawable/white_btn_selector"
        android:gravity="end|bottom"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:text="@string/clear"
        android:textSize="20sp"
        />
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/btn_del"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:background="@drawable/white_btn_selector"
        android:gravity="end|bottom"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:text="@string/delete"
        android:textSize="20sp"
        />
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/btn_divide"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:gravity="end|bottom"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:text="@string/divide"
        android:background="@drawable/white_btn_selector"
        android:textSize="20sp"
        />
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/btn_multiply"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:gravity="end|bottom"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/white_btn_selector"
        android:text="@string/multiply"

        android:textSize="20sp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:orientation="horizontal"
        >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/white_btn_selector"
            android:gravity="end|bottom"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/seven"
            android:textSize="20sp"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/white_btn_selector"
            android:layout_margin="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:gravity="end|bottom"
            android:text="@string/night"
            android:textSize="20sp"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_9"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/white_btn_selector"
            android:gravity="end|bottom"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/nine"
            android:textSize="20sp"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_minus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_btn_selector"
            android:gravity="end|bottom"
            android:text="@string/minus"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="10dip"
        android:orientation="horizontal"

        >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/white_btn_selector"
            android:gravity="end|bottom"
            android:text="@string/four"
            android:textSize="20sp"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:gravity="end|bottom"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/five"
            android:background="@drawable/white_btn_selector"
            android:textSize="20sp"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_btn_selector"
            android:gravity="end|bottom"
            android:text="6"
            android:textSize="20sp"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_plus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:gravity="end|bottom"
            android:background="@drawable/white_btn_selector"
            android:text="@string/plus"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="bottom|end"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/white_btn_selector"
                    android:textSize="20sp"
                    android:text="1"
                    android:id="@+id/btn_1"/>


                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dip"
                    android:gravity="bottom|end"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:textSize="20sp"
                    android:id="@+id/btn_2"
                    android:background="@drawable/white_btn_selector"
                    android:text="2" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dip"
                    android:gravity="bottom|end"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:textSize="20sp"
                    android:id="@+id/btn_3"
                    android:background="@drawable/white_btn_selector"
                    android:text="3" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btn_0"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:paddingBottom="10dp"
                android:background="@drawable/white_btn_selector"
                android:paddingRight="10dp"
                android:gravity="end|bottom"
                android:text="@string/zero"
                android:textSize="20sp"
                />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btn_point"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/white_btn_selector"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="20dip"
                android:gravity="end|bottom"
                android:text="@string/point"
                android:textSize="20sp"
                />
            </LinearLayout>
    </LinearLayout>

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/btn_equal"
        android:layout_width="60dip"
        android:layout_height="130dip"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/orange_selecter"
        android:layout_marginLeft="20dip"
        android:gravity="end|bottom"
        android:text="@string/equal"
        android:textSize="20sp"
         />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>













